tests/kubernetes/custom-3.1.4/noncompliant/node.yaml
apiVersion: v1
kind: Node
metadata:
  name: noncompliant-node
