tests/kubernetes/custom-3.1.4/noncompliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-3.1.4-noncompliant
policies:
  - ../../../../policies/kubernetes/worker-nodes/custom-3.1.4.yaml
resources:
  - node.yaml
results:
  - policy: custom-3-1-4-kubelet-config-owner
    rule: check-kubelet-config-owner
    resources:
      - noncompliant-node
    kind: Node
    result: fail
